--- a/argo-cd/argocd-rbac.yml
+++ b/argo-cd/argocd-rbac.yml
@@ -16,9 +16,7 @@ data:
   policy.csv: |
     p, role:org-admin, applications, *, */*, allow
     p, role:org-admin, clusters, *, *, allow
-    p, role:org-admin, repositories, get, *, allow
-    p, role:org-admin, repositories, create, *, allow
-    p, role:org-admin, repositories, update, *, allow
-    p, role:org-admin, repositories, delete, *, allow
+    p, role:org-admin, repositories, *, */*, allow
+    p, role:org-admin, projects, *, */*, allow
     g, argonaut, role:org-admin
   policy.default: role:''
