--- a/qa/sock-shop-app.yaml
+++ b/qa/sock-shop-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sock-shop
   namespace: argocd
 spec:
-  project: sock-shop-qa
+  project: default
   source:
     repoURL: https://github.com/toelt/webservices-demo-helm-charts.git
     targetRevision: HEAD
