--- a/qa/values.yaml
+++ b/qa/values.yaml
@@ -8,11 +8,11 @@ java:
     options: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
 
 istio:
-    enabled: true
+    enabled: false
 
 ingress:
     annotations:
-        kubernetes.io/ingress.class: istio
+        kubernetes.io/ingress.class: nginx
     labels: {}
     host: ''
     tlsSecretName: ''
