--- a/qa/templates/orders-dep.yaml
+++ b/qa/templates/orders-dep.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: orders
-        image: {{if .Values.global.registry}}{{ .Values.global.registry }}/{{end}}{{ .Values.orders.image.repo }}:{{ .Values.orders.image.tag }}
+        image: {{ .Values.orders.image.repo }}:{{ .Values.orders.image.tag }}
         command:
         - /usr/local/bin/java.sh
         - -jar
