--- a/qa/templates/user-db-dep.yaml
+++ b/qa/templates/user-db-dep.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: user-db
-        image: {{if .Values.global.registry}}{{ .Values.global.registry }}/{{end}}{{ .Values.userdb.image.repo }}:{{ .Values.userdb.image.tag }}
+        image: {{ .Values.userdb.image.repo }}:{{ .Values.userdb.image.tag }}
         ports:
         - name: mongo
           containerPort: 27017
