--- a/qa/templates/user-dep.yaml
+++ b/qa/templates/user-dep.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: user
-        image: {{if .Values.global.registry}}{{ .Values.global.registry }}/{{end}}{{ .Values.user.image.repo }}:{{ .Values.user.image.tag }}
+        image: {{ .Values.user.image.repo }}:{{ .Values.user.image.tag }}
         command:
         - /user
         args:
