--- a/qa/templates/session-db-dep.yaml
+++ b/qa/templates/session-db-dep.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: session-db
-        image: {{if .Values.global.registry}}{{ .Values.global.registry }}/{{end}}{{ .Values.sessiondb.image.repo }}:{{ .Values.sessiondb.image.tag }}
+        image: {{ .Values.sessiondb.image.repo }}:{{ .Values.sessiondb.image.tag }}
         ports:
         - name: redis
           containerPort: 6379
