--- a/qa/templates/zipkin-mysql-dep.yaml
+++ b/qa/templates/zipkin-mysql-dep.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: zipkin-mysql
-        image: {{if .Values.global.registry}}{{ .Values.global.registry }}/{{end}}{{ .Values.zipkinmysql.image.repo }}:{{ .Values.zipkinmysql.image.tag }}
+        image: {{ .Values.zipkinmysql.image.repo }}:{{ .Values.zipkinmysql.image.tag }}
         ports:
         - name: mysql
           containerPort: 3306
