--- a/qa/values.yaml
+++ b/qa/values.yaml
@@ -14,8 +14,8 @@ ingress:
     annotations:
         kubernetes.io/ingress.class: nginx
     labels: {}
-    host: ''
-    tlsSecretName: ''
+    host: '*'
+    tlsSecretName: '*'
 
 cartsdb:
     image:
