--- a/qa/templates/front-end-dep.yaml
+++ b/qa/templates/front-end-dep.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: front-end
-        image: {{if .Values.global.registry}}{{ .Values.global.registry }}/{{end}}{{ .Values.frontend.image.repo }}:{{ .Values.frontend.image.tag }}
+        image: {{ .Values.frontend.image.tag }}
         resources:
 {{ toYaml .Values.frontend.resources | indent 10 }}
         ports:
