--- a/qa/values.yaml
+++ b/qa/values.yaml
@@ -8,7 +8,7 @@ java:
     options: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
 
 istio:
-    enabled: true
+    enabled: false
 
 cartsdb:
     image:
