Modified revision history for clean up

--- a/qa/templates/catalogue-db-dep.yaml
+++ b/qa/templates/catalogue-db-dep.yaml
@@ -7,6 +7,7 @@ metadata:
     name: catalogue-db
 spec:
   replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       name: catalogue-db
