--- a/qa/templates/catalogue-dep.yaml
+++ b/qa/templates/catalogue-dep.yaml
@@ -7,6 +7,7 @@ metadata:
     name: catalogue
 spec:
   replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       name: catalogue
