--- a/qa/templates/loadtest-dep.yaml
+++ b/qa/templates/loadtest-dep.yaml
@@ -7,6 +7,7 @@ metadata:
     name: load-test
 spec:
   replicas: {{ .Values.loadtest.replicas }}
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       name: load-test
