--- a/qa/templates/orders-db-dep.yaml
+++ b/qa/templates/orders-db-dep.yaml
@@ -7,6 +7,7 @@ metadata:
     name: orders-db
 spec:
   replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       name: orders-db
