--- a/qa/templates/zipkin-mysql-dep.yaml
+++ b/qa/templates/zipkin-mysql-dep.yaml
@@ -7,6 +7,7 @@ metadata:
     name: zipkin-mysql
 spec:
   replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       name: zipkin-mysql
