--- a/qa/templates/postsync-hook.yaml
+++ b/qa/templates/postsync-hook.yaml
@@ -10,8 +10,8 @@ spec:
   template:
     spec:
       containers:
-        - name: sleep
-          image: alpine:latest
-          command: ["sleep", "30"]
+        - name: e2e-tests
+          image: eu.gcr.io/argo-prototype-1/e2e-tests:master
+          command: ["run"]
       restartPolicy: Never
   backoffLimit: 0
